Address review: idempotent CAS replays, above-watermark STALE marks, cutoff off-by-one, legacy DELETE fallback
- MaterializedViewPartitionManager: treat a lost-ack replay of our own
  committed write (bucket already VALID with the intended fingerprint) as an
  idempotent no-op in appendValid/refreshValid/clearValid instead of a
  strict-precondition failure. ZK's client-side retryUntilConnected can commit
  a set and then replay it after a connection drop; the old behavior
  hard-failed a minion task that had actually succeeded.
- MaterializedViewConsistencyManager: stop capping the STALE-mark range at
  watermarkMs. Out-of-order batch APPEND completion leaves VALID buckets above
  the watermark, and the cap silently dropped their STALE marks - serving
  stale data once the watermark advanced over them with nothing left to
  re-mark. Candidate enumeration iterates existing partition keys, so the cap
  is no longer needed to bound the list.
- MaterializedViewTaskScheduler: fix the APPEND-cutoff off-by-one against
  inclusive segment end times (resolveAppendCutoffMs converts with +1) so an
  exactly-covered tail bucket is admitted; without it a complete static
  dataset never materializes its final bucket and daily-batch sources lag one
  bucket behind the old wall-clock behavior.
- MaterializedViewTaskExecutor: fall back to the MV definition znode's base
  table when a DELETE task config carries no sourceTableName (dispatched by a
  pre-upgrade controller), so a mixed-version rollout cannot strand legacy
  DELETE tasks in a fail-retry loop.
- Consolidate the OFFLINE-first table-type probe into
  MaterializedViewTaskUtils#resolveTableNameWithType (was triplicated across
  scheduler, executor, and consistency manager).
- DESIGN.md: document the V1 watermark-split routing limitation and the V2
  per-bucket routing plan referenced from the rewrite-engine javadoc.
- Tests for all of the above; rewrite the misnamed
  testValidateForPersistFailureFailsFast as a real fail-fa